<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="104dp"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="78dp"
        android:text="@string/list_api_url_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextListApi"
        android:layout_width="271dp"
        android:layout_height="41dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="65dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/list_api_url_edittext_placeholder"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="31dp"
        android:text="@string/error_api_url_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextErrorApi"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/error_api_url_edittext_placeholder"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/editTextListApi" />

    <EditText
        android:id="@+id/editTextNumberDecimalRefreshTime"
        android:layout_width="269dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:ems="60"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editTextIncomingCallApi" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/refresh_time_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="73dp"
        android:layout_height="18dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="41dp"
        android:text="@string/receive_api_url_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextReceiveApi"
        android:layout_width="269dp"
        android:layout_height="45dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/receive_api_url_edittext_placeholder"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/editTextErrorApi" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="76dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/incoming_call_api_url_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextIncomingCallApi"
        android:layout_width="265dp"
        android:layout_height="46dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/incoming_call_api_url_edittext_placeholder"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editTextReceiveApi" />
</androidx.constraintlayout.widget.ConstraintLayout>